Bug 94349 - [SNB HSW BDW BAT IGT] igt/kms_pipe_crc_basic: Device suspended during HW access
Summary: [SNB HSW BDW BAT IGT] igt/kms_pipe_crc_basic: Device suspended during HW access
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: highest blocker
Assignee: Matt Roper
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 94384 94645 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-03-01 15:00 UTC by Arun
Modified: 2017-07-24 22:42 UTC (History)
5 users (show)

See Also:
i915 platform: SNB
i915 features: display/atomic, display/watermark


Attachments

Description Arun 2016-03-01 15:00:53 UTC
[  299.087327] ------------[ cut here ]------------
[  299.087408] WARNING: CPU: 1 PID: 5953 at drivers/gpu/drm/i915/intel_drv.h:1468 gen6_write32+0x1dc/0x270 [i915]()
[  299.087412] Device suspended during HW access
[  299.087416] Modules linked in: i915 x86_pkg_temp_thermal snd_hda_codec_hdmi intel_powerclamp snd_hda_codec_generic coretemp snd_hda_intel crct10dif_pclmul crc32_pclmul mei_me snd_hda_codec ghash_clmulni_intel snd_hwdep snd_hda_core snd_pcm lpc_ich mei sdhci_pci sdhci mmc_core e1000e ptp pps_core
[  299.087474] CPU: 1 PID: 5953 Comm: kms_pipe_crc_ba Tainted: G     U          4.5.0-rc6-gfxbench+ #1
[  299.087479] Hardware name: LENOVO 42962WU/42962WU, BIOS 8DET56WW (1.26 ) 12/01/2011
[  299.087483]  0000000000000000 ffff8800d48bb938 ffffffff813fba95 ffff8800d48bb980
[  299.087494]  ffffffffa02f8cb0 ffff8800d48bb970 ffffffff81078711 ffff8800d4bd0000
[  299.087502]  0000000000045110 0000000000070001 0000000016303606 ffff8800d48bbae4
[  299.087511] Call Trace:
[  299.087524]  [<ffffffff813fba95>] dump_stack+0x67/0x92
[  299.087534]  [<ffffffff81078711>] warn_slowpath_common+0x81/0xc0
[  299.087541]  [<ffffffff81078797>] warn_slowpath_fmt+0x47/0x50
[  299.087601]  [<ffffffffa0266bac>] gen6_write32+0x1dc/0x270 [i915]
[  299.087649]  [<ffffffffa0210a68>] _ilk_disable_lp_wm+0x98/0xd0 [i915]
[  299.087695]  [<ffffffffa0216074>] ilk_program_watermarks+0x4e4/0x9a0 [i915]
[  299.087754]  [<ffffffffa0216640>] ilk_optimize_watermarks+0x110/0x130 [i915]
[  299.087838]  [<ffffffffa0285a04>] intel_atomic_commit+0x8b4/0x1610 [i915]
[  299.087853]  [<ffffffff8152ba4a>] ? drm_atomic_set_crtc_for_connector+0x2a/0xe0
[  299.087863]  [<ffffffff8152c722>] drm_atomic_commit+0x32/0x50
[  299.087879]  [<ffffffff81509175>] drm_atomic_helper_set_config+0x75/0xb0
[  299.087892]  [<ffffffff8151cb60>] drm_mode_set_config_internal+0x60/0x110
[  299.087903]  [<ffffffff81520276>] drm_mode_setcrtc+0x186/0x4f0
[  299.087915]  [<ffffffff8118d0b8>] ? __might_fault+0x48/0xa0
[  299.087927]  [<ffffffff8151215d>] drm_ioctl+0x13d/0x590
[  299.087938]  [<ffffffff815200f0>] ? drm_mode_setplane+0x1b0/0x1b0
[  299.087954]  [<ffffffff811e5c7a>] do_vfs_ioctl+0x8a/0x670
[  299.087969]  [<ffffffff817c3026>] ? int_ret_from_sys_call+0x52/0x9f
[  299.087981]  [<ffffffff811f1b2a>] ? __fget_light+0x6a/0x90
[  299.087993]  [<ffffffff811e629c>] SyS_ioctl+0x3c/0x70
[  299.088004]  [<ffffffff817c2e9b>] entry_SYSCALL_64_fastpath+0x16/0x73
[  299.088162] ---[ end trace 3de9d473954193df ]---
Comment 1 Arun 2016-03-01 15:03:20 UTC
igt/tests/kms_pipe_crc_basic --run-subtest nonblocking-crc-pipe-A
Comment 2 Ville Syrjala 2016-03-01 15:51:04 UTC
Also happens on HSW and BDW, and in other tests as well. I think it would happen on ILK and IVB as well if we enabled runtime PM on those platforms.

Regression from the two-stage wm programming.
Comment 3 Matt Roper 2016-03-01 18:09:48 UTC
Is there any special system setup or non-default driver settings required to trigger this?  I don't see this warning when I run the suggested test on SNB, and CI doesn't seem to be reporting it either as far as I can see.
Comment 4 Ville Syrjala 2016-03-01 18:16:06 UTC
(In reply to Matt Roper from comment #3)
> Is there any special system setup or non-default driver settings required to
> trigger this?  I don't see this warning when I run the suggested test on
> SNB, and CI doesn't seem to be reporting it either as far as I can see.

Maybe run the pm_rpm tests first so that they drop the autosuspend delay to 0 etc., and then see if it happens.
Comment 5 Matt Roper 2016-03-01 21:05:48 UTC
(In reply to Ville Syrjala from comment #4)
> (In reply to Matt Roper from comment #3)
> > Is there any special system setup or non-default driver settings required to
> > trigger this?  I don't see this warning when I run the suggested test on
> > SNB, and CI doesn't seem to be reporting it either as far as I can see.
> 
> Maybe run the pm_rpm tests first so that they drop the autosuspend delay to
> 0 etc., and then see if it happens.

Still no luck reproducing this on my end.  Is this something you can reproduce 100% of the time or is it a sporadic issue?
Comment 6 Arun 2016-03-02 16:41:28 UTC
BAT reporting same warning on igt/tests/pm_rpm --run-subtest basic-rte
Comment 7 Ville Syrjala 2016-03-02 17:27:04 UTC
Also seen in pm_rpm@basic-pci-d3-state on snb-x220t in [1], which is somewhat odd as that test always fails (as in is unable to autosuspend the device) on particular machine for some reason.

[1] /archive/results/CI_IGT_test/Patchwork_1518/
Comment 8 Mika Kuoppala 2016-03-03 11:06:25 UTC
Happens also with kms_pipe_crc_basic@nonblocking-crc-pipe-b-frame-sequence
Comment 9 Matt Roper 2016-03-05 00:01:36 UTC
Proposed fix:

https://patchwork.freedesktop.org/patch/75903/
Comment 10 Kimmo Nikkanen 2016-03-18 10:16:39 UTC
Can QA verify whether this solves the problem
Comment 11 Daniel Vetter 2016-03-21 08:52:33 UTC
*** Bug 94645 has been marked as a duplicate of this bug. ***
Comment 12 Imre Deak 2016-03-22 13:20:41 UTC
Patch is pushed now to -nightly, closing this.
Comment 13 Mika Kuoppala 2016-04-22 06:28:23 UTC
*** Bug 94384 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.