drm/i915: Only write watermark registers if a pipe is active

If all pipes are off, then we may have entered runtime suspend and
writing these registers will have no effect anyway.  When a pipe is
re-enabled, it's crtc_enable will take care of programming appropriate
watermark values.

Cc: arun.siluvery@linux.intel.com
Cc: ville.syrjala@linux.intel.com
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=94349
Fixes: ed4a6a7ca853 ("drm/i915: Add two-stage ILK-style watermark programming (v11)")
Signed-off-by: Matt Roper <matthew.d.roper@intel.com>